--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/static/app.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
       <a class="navbar-brand" href="/">MadMadLibs</a>
       <button
         class="navbar-toggler"
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="madlib-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link home" href="/">Home</a>
           </li>
         </ul>
       </div>
